--- a/Spring_Boot_04_ORM/src/main/resources/application.properties
+++ b/Spring_Boot_04_ORM/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.datasource.password=postgres
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create
+#spring.sql.init.mode=always
 
