--- a/Spring_Boot_10_Security/src/main/resources/application.properties
+++ b/Spring_Boot_10_Security/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 #spring.security.user.name=ower    ------------these line for default configuration
 #spring.security.user.password=ower123
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/cybertek
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
