--- a/Spring_Boot_13_REST_ResponseEntity/src/main/resources/application.properties
+++ b/Spring_Boot_13_REST_ResponseEntity/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 
 server.servlet.context-path=/api
