--- a/Spring_Boot_18_Rest_Security_JWT/src/main/resources/application.yml
+++ b/Spring_Boot_18_Rest_Security_JWT/src/main/resources/application.yml
@@ -10,16 +10,16 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
-  sql:
-    init:
-      mode: always
-      data-locations: classpath:data.sql
+  #sql:
+  #  init:
+   #   mode: always
+    #  data-locations: classpath:data.sql
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: false
   security:
     jwt:
